fixed kitty and header button alignment

--- a/styles/elements/Footer.module.scss
+++ b/styles/elements/Footer.module.scss
@@ -56,8 +56,9 @@
     justify-content: center;
   }
   .footerImage {
-    height: 160px;
-    width: 70%;
+    display: block;
+    height: 180px;
+    width: 90%;
   }
 }
 
